src/objects/Alsur_Baskets_Cali__c.object
<CustomObject>
    <fields>
        <fullName>Basket__c</fullName>
        <label>Basket</label>
        <referenceTo>Basket__c</referenceTo>
        <relationshipLabel>Alsur Baskets Cali</relationshipLabel>
        <relationshipName>Alsur_Baskets_Cali</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Semillas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coophsur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASOAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aproborca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si se puede</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ofimovil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alsur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gran Tescual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Alsur Baskets Cali</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Alsur Baskets Cali Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alsur Baskets Cali</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>